upd optical model

--- a/thesis.tex
+++ b/thesis.tex
@@ -146,7 +146,7 @@
 % \include{chapters/java_overview.tex}
 % \include{chapters/eo_overview.tex}
 % \include{chapters/conceptual_comparison.tex}
-\include{chapters/implementation.tex}
+% \include{chapters/implementation.tex}
 \include{chapters/results.tex}
 % \include{chapters/acknowledgements.tex}
 
