--- a/ref.bib
+++ b/ref.bib
@@ -257,3 +257,10 @@ volume = {PP},
 journal = {IEEE Sensors Journal},
 doi = {10.1109/JSEN.2018.2834727}
 }
+@book{handbook_sensors,
+author = {Fraden, Jacob},
+title = {Handbook of Modern Sensors: Physics, Designs, and Applications (Handbook of Modern Sensors)},
+year = {2003},
+isbn = {0387007504},
+publisher = {SpringerVerlag}
+}
