add hysteresis values for capacitive and ERSG

--- a/ref.bib
+++ b/ref.bib
@@ -43,7 +43,7 @@
 @misc{keller_article,
   title        = {Piezoresistive Pressure Measurement Technology, [Online]},
   author       = {S. Boyn},
-  note = {(accessed Nov. 2, 2023)},
+  note = {(Accessed Nov. 2, 2023)},
 
   howpublished = {\url{https://www.catsensors.com/media/Archivos_pdf/Fachbeitrag_Piezo_e.pdf}},
 }
@@ -172,7 +172,7 @@ abstract = {In this paper, we propose a small, low cost force sensor based on a
 commercially available photointerrupter for use in a tendon-driven robotic hand.
  The proposed sensor consists of a photointerrupter and an elastic frame and is designed
   to measure tendon tension. Using the design methodology presented in this paper, 
-  the force sensor can be made small enough (4mm×6mm×10mm) to be inserted into a 
+  the force sensor can be made small enough (4mm x 6mm x 10mm) to be inserted into a 
   robotic fingertip and made able to measure a large allowable force (approximately 200N)
    with low non-linearity (1.85%) and low hysteresis (1.19%). 
    Due to the characteristics of the photointerrupter, it is possible to overcome
@@ -263,4 +263,57 @@ title = {Handbook of Modern Sensors: Physics, Designs, and Applications (Handboo
 year = {2003},
 isbn = {0387007504},
 publisher = {SpringerVerlag}
+}
+“Isotropic.” Merriam-Webster.com Dictionary, Merriam-Webster, https://www.merriam-webster.com/dictionary/isotropic. Accessed 20 Feb. 2024.
+@misc{isotropic,
+  title = {Isotropic},
+  note = {(Accessed 20 Feb. 2024.)},
+  howpublished = {\url{https://www.merriam-webster.com/dictionary/isotropic}},
+  AUTHOR = {Merriam-Webster},
+}
+@article{six_axis_ERSG_hyst1,
+title = {Development and evaluation of a compact 6-axis force/moment sensor with a serial structure for the humanoid robot foot},
+journal = {Measurement},
+volume = {70},
+pages = {110-122},
+year = {2015},
+issn = {0263-2241},
+doi = {https://doi.org/10.1016/j.measurement.2015.03.027},
+url = {https://www.sciencedirect.com/science/article/pii/S0263224115001736},
+author = {Chao Yuan and Lu-Ping Luo and Quan Yuan and Jing Wu and Rui-Jun Yan and Hyeonguk Kim and Kyoo-Sik Shin and Chang-Soo Han},
+keywords = {Six-axis force/moment sensor, Serial structure, Interference error, Structural isotropy, Humanoid robot foot},
+abstract = {Used for hysteresis. In order to walk safely, forces and moments exerted on humanoid robot foot should be measured and used for controlling the robot. This paper describes the development and evaluation of a six-axis force/moment sensor used under humanoid robot foot. The developed sensor is capable of measuring 400N horizontal force, 1000N vertical force, 20N·m moment about the horizontal axis and 10N·m moment about the vertical axis using rectangular cross-sectional beams. The structure of the sensor is newly modeled, and the sensing elements are simulated by using finite element method (FEM). Then the sensor is fabricated by attaching strain gages onto the beams. Finally, a characteristic test of the developed sensor is carried out, and the output from FEM analysis agrees with those from the characteristic test.}
+}
+
+@article{six_axis_ERSG_hyst2,
+author = {Feng, Lihang and Ba, Aaa and Zhang, Weigong and Pang, Han and Wang, Tie},
+year = {2015},
+month = {02},
+pages = {},
+title = {Design and optimization of a self-decoupled six-axis wheel force transducer for a heavy truck},
+volume = {229},
+journal = {Proceedings of the Institution of Mechanical Engineers, Part D: Journal of Automobile Engineering},
+doi = {10.1177/0954407014566439}
+}
+
+@article{pressure_capac_hysteresis,
+author = {Wang, Xiaoyi and Deng, Yang and Jiang, Peng and Chen, Xingru and Yu, Hongyu},
+year = {2022},
+month = {10},
+pages = {113},
+title = {Low-hysteresis, pressure-insensitive, and transparent capacitive strain sensor for human activity monitoring},
+volume = {8},
+journal = {Microsystems & nanoengineering},
+doi = {10.1038/s41378-022-00450-7}
+}
+
+@article{pressure_capac_hysteresis_2,
+author = {Roh, Jay and Shin, Kyu-Sik and Song, Tae-Ha and Kim, Jihong and Lee, Dae-Sung},
+year = {2023},
+month = {04},
+pages = {975},
+title = {Development of an Implantable Capacitive Pressure Sensor for Biomedical Applications},
+volume = {14},
+journal = {Micromachines},
+doi = {10.3390/mi14050975}
 }
