add hysteresis calculation

--- a/ref.bib
+++ b/ref.bib
@@ -39,7 +39,6 @@
   doi     = {https://doi.org/10.1016/j.sna.2016.08.020},
   url     = {https://www.sciencedirect.com/science/article/pii/S0924424716303958},
 }
-[1] S. Boyn, Piezoresistive Pressure Measurement Technology, https://www.catsensors.com/media/Archivos_pdf/Fachbeitrag_Piezo_e.pdf (). 
 @misc{keller_article,
   title        = {Piezoresistive Pressure Measurement Technology, [Online]},
   author       = {S. Boyn},
@@ -47,7 +46,7 @@
 
   howpublished = {\url{https://www.catsensors.com/media/Archivos_pdf/Fachbeitrag_Piezo_e.pdf}},
 }
-% [1] J. O. Templeman, B. B. Sheil, and T. Sun, “Multi-axis force sensors: A state-of-the-art review,” Sensors and Actuators A: Physical, vol. 304, p. 111772, 2020. doi:10.1016/j.sna.2019.111772 
+
 @article{multi_axis_force_sensors_review,
   title   = {Multi-axis force sensors: A state-of-the-art review},
   journal = {Sensors and Actuators A: Physical},
@@ -67,8 +66,7 @@
   journal = {IEEE International Conference on Robotics and Automation},
   volume  = {1},
 }
-% [1] G. Palli, L. Moriello, U. Scarcia, and C. Melchiorri, “Development of an optoelectronic 6-axis force/torque sensor for Robotic Applications,” Sensors and Actuators A: Physical, vol. 220, no. Volume 220, pp. 333–346, Dec. 2014. doi:10.1016/j.sna.2014.09.023 
-% [1] , “Development of an optoelectronic 6-axis force/torque sensor for Robotic Applications,” Sensors and Actuators A: Physical, vol. 220, no. Volume 220, pp. 333–346, Dec. 2014. doi:10.1016/j.sna.2014.09.023 [1] G. Palli, L. Moriello, U. Scarcia, and C. Melchiorri, “Development of an optoelectronic 6-axis force/torque sensor for Robotic Applications,” Sensors and Actuators A: Physical, vol. 220, no. Volume 220, pp. 333–346, Dec. 2014. doi:10.1016/j.sna.2014.09.023 
+
 @article{optic_mirror,
   author          = {G. Palli, L. Moriello, U. Scarcia, and C. Melchiorri},
   journal         = {Sensors and Actuators A: Physical},
@@ -149,13 +147,13 @@ doi = {https://doi.org/10.1016/j.mechatronics.2021.102623},
 url = {https://www.sciencedirect.com/science/article/pii/S0957415821001045},
 author = {U. Mayetin and S. Kucuk},}
 
-@INPROCEEDINGS{1990_optic,
-  author={S. Hirose and K. Yoneda},
-  booktitle={Proceedings., IEEE International Conference on Robotics and Automation}, 
-  title={Development of optical six-axial force sensor and its signal calibration considering nonlinear interference}, 
-  year={1990},
-  pages={46-53 vol.1},
-  doi={10.1109/ROBOT.1990.125944},}
+% @INPROCEEDINGS{1990_optic,
+%   author={S. Hirose and K. Yoneda},
+%   booktitle={Proceedings., IEEE International Conference on Robotics and Automation}, 
+%   title={Development of optical six-axial force sensor and its signal calibration considering nonlinear interference}, 
+%   year={1990},
+%   pages={46-53 vol.1},
+%   doi={10.1109/ROBOT.1990.125944},}
 
 @article{photointerrupter_rob_hand,
 title = {Design of a miniature force sensor based on photointerrupter for robotic hand},
@@ -243,7 +241,7 @@ ARTICLE-NUMBER = {629},
 URL = {https://www.mdpi.com/1424-8220/24/2/629},
 PubMedID = {38276323},
 ISSN = {1424-8220},
-ABSTRACT = {This paper starts with an overview of the main principles used for pressure measurements, focusing on their usage in industrial applications&rsquo; domains. Then, the importance of calibration procedures, namely, static and dynamic calibration of pressure sensors, is analyzed. Regarding calibration, it is important to note that there are several applications where the pressure signals to be measured can have large variations in short periods of time. In industrial applications, particularly in continuous production processes, generally, dynamic pressure measurements are less common; however, they are still required in several cases, such as control loops that are very sensitive to pressure variations, even if the frequencies of those variations are in the range of a few tens of hertz, or even lower. The last part of the paper presents the hardware and software of a flexible and low-cost static and dynamic pressure calibrator that also presents the capability to generate arbitrary waveform pressure signals for calibration and testing purposes. The proposed calibrator also includes the following advantages: remote pressure sensing capabilities that can be used to minimize calibration errors, such as those associated with capillary effects and pressure leakages; portability; and low cost. The paper ends with some experimental results obtained with the proposed calibrator.},
+ABSTRACT = {This paper starts with an overview of the main principles used for pressure measurements, focusing on their usage in industrial applications domains. Then, the importance of calibration procedures, namely, static and dynamic calibration of pressure sensors, is analyzed. Regarding calibration, it is important to note that there are several applications where the pressure signals to be measured can have large variations in short periods of time. In industrial applications, particularly in continuous production processes, generally, dynamic pressure measurements are less common; however, they are still required in several cases, such as control loops that are very sensitive to pressure variations, even if the frequencies of those variations are in the range of a few tens of hertz, or even lower. The last part of the paper presents the hardware and software of a flexible and low-cost static and dynamic pressure calibrator that also presents the capability to generate arbitrary waveform pressure signals for calibration and testing purposes. The proposed calibrator also includes the following advantages: remote pressure sensing capabilities that can be used to minimize calibration errors, such as those associated with capillary effects and pressure leakages; portability; and low cost. The paper ends with some experimental results obtained with the proposed calibrator.},
 DOI = {10.3390/s24020629}
 }
 
@@ -264,7 +262,7 @@ year = {2003},
 isbn = {0387007504},
 publisher = {SpringerVerlag}
 }
-“Isotropic.” Merriam-Webster.com Dictionary, Merriam-Webster, https://www.merriam-webster.com/dictionary/isotropic. Accessed 20 Feb. 2024.
+
 @misc{isotropic,
   title = {Isotropic},
   note = {(Accessed 20 Feb. 2024.)},
@@ -303,7 +301,7 @@ month = {10},
 pages = {113},
 title = {Low-hysteresis, pressure-insensitive, and transparent capacitive strain sensor for human activity monitoring},
 volume = {8},
-journal = {Microsystems & nanoengineering},
+journal = {Microsystems \& nanoengineering},
 doi = {10.1038/s41378-022-00450-7}
 }
 
@@ -316,4 +314,12 @@ title = {Development of an Implantable Capacitive Pressure Sensor for Biomedical
 volume = {14},
 journal = {Micromachines},
 doi = {10.3390/mi14050975}
+}
+% TODO: check
+@article{hysteresis_calc,
+  journal       = {Missouri University of Science and Technology},
+  howpublished = {\url{https://web.mst.edu/~cottrell/me240/resources/Calibration/}},
+  title        = {Explanation of Hysteresis calculation},
+  year         = {2011},
+  note = {(Accessed 20 Feb. 2024.)}
 }
