--- a/thesis.tex
+++ b/thesis.tex
@@ -143,14 +143,9 @@
 \include{chapters/literature_review.tex}
 \include{chapters/optical_modeling.tex}
 
-% \include{chapters/java_overview.tex}
-% \include{chapters/eo_overview.tex}
-% \include{chapters/conceptual_comparison.tex}
-% \include{chapters/implementation.tex}
+\include{chapters/implementation.tex}
 \include{chapters/results.tex}
 % \include{chapters/acknowledgements.tex}
-
-
 
 %% REFERENCES
 \printbibliography[heading=bibintoc,title={Bibliography cited}]
