add ISO crosstalk reference

--- a/ref.bib
+++ b/ref.bib
@@ -323,3 +323,14 @@ doi = {10.3390/mi14050975}
   year         = {2011},
   note = {(Accessed 20 Feb. 2024.)}
 }
+
+@techreport{ISO_cross_talk,
+type = {Standard},
+key = {ISO 21612:2021},
+month = feb,
+year = {2021},
+title = {{Road vehicles -- Crosstalk determination for multi-axis load cell}},
+volume = {2021},
+address = {Geneva, CH},
+institution = {International Organization for Standardization}
+}
