--- a/thesis.tex
+++ b/thesis.tex
@@ -125,6 +125,7 @@
    \begin{flushleft}\raggedleft #1\end{flushleft}
 }
 
+\usepackage{subfiles}
 
 \begin{document}
 
@@ -142,8 +143,7 @@
 \include{chapters/introduction.tex}
 \include{chapters/glossaries.tex}
 \include{chapters/literature_review.tex}
-\include{chapters/optical_modeling.tex}
-
+\include{chapters/methodology/electric_design.tex}
 \include{chapters/implementation.tex}
 \include{chapters/results.tex}
 % \include{chapters/acknowledgements.tex}
