--- a/thesis.tex
+++ b/thesis.tex
@@ -143,7 +143,7 @@
 \include{chapters/introduction.tex}
 \include{chapters/glossaries.tex}
 \include{chapters/literature_review.tex}
-\include{chapters/methodology/electric_design.tex}
+\include{chapters/methodology.tex}
 \include{chapters/implementation.tex}
 \include{chapters/results.tex}
 % \include{chapters/acknowledgements.tex}
