add ns simulation results

--- a/ref.bib
+++ b/ref.bib
@@ -100,9 +100,6 @@ url = {https://www.sciencedirect.com/science/article/pii/S0924424797015343},
 author = {L. P. Chao and K. T. Chen},
 }
 
-% Wu, Bo, and Ping Cai. “Decoupling Analysis of a Sliding Structure Six-Axis Force/Torque Sensor.” 
-% Measurement Science Review, vol. 13, no. 4, 1 Aug. 2013, pp. 187–193, https://doi.org/10.2478/msr-2013-0028. Accessed 29 Apr. 2020.
-
 @article{decoupling_sliding_structure,
 title = {Decoupling Analysis of a Sliding Structure Six-Axis Force/Torque Sensor},
 journal = {Measurement Science Review},
@@ -115,15 +112,15 @@ author = {W. Bo and P. Cai},
 }
 
 @article{shape_optimization_decoupled,
-title = {Shape optimization of a mechanically decoupled six-axis force/torque sensor},
-journal = {Sensors and Actuators A: Physical},
-volume = {209},
-pages = {41-51},
-year = {2014},
-% issn = {0924-4247},
-doi = {https://doi.org/10.1016/j.sna.2014.01.001},
-% url = {https://www.sciencedirect.com/science/article/pii/S092442471400003X},
-author = {M. K. Kang, S. L. and J. H. Kim},
+  title = {Shape optimization of a mechanically decoupled six-axis force/torque sensor},
+  journal = {Sensors and Actuators A: Physical},
+  volume = {209},
+  pages = {41-51},
+  year = {2014},
+  % issn = {0924-4247},
+  doi = {https://doi.org/10.1016/j.sna.2014.01.001},
+  % url = {https://www.sciencedirect.com/science/article/pii/S092442471400003X},
+  author = {M. K. Kang, S. L. and J. H. Kim},
 }
 
 @ARTICLE{perfect_sensor,
@@ -137,88 +134,88 @@ author = {M. K. Kang, S. L. and J. H. Kim},
   doi={10.1109/TMECH.2020.3043346}}
 
 @article{modal_sensor,
-title = {A low cost 3-DOF force sensing unit design for wrist rehabilitation robots},
-journal = {Mechatronics},
-volume = {78},
-pages = {102623},
-year = {2021},
-issn = {0957-4158},
-doi = {https://doi.org/10.1016/j.mechatronics.2021.102623},
-url = {https://www.sciencedirect.com/science/article/pii/S0957415821001045},
-author = {U. Mayetin and S. Kucuk},}
+  title = {A low cost 3-DOF force sensing unit design for wrist rehabilitation robots},
+  journal = {Mechatronics},
+  volume = {78},
+  pages = {102623},
+  year = {2021},
+  issn = {0957-4158},
+  doi = {https://doi.org/10.1016/j.mechatronics.2021.102623},
+  url = {https://www.sciencedirect.com/science/article/pii/S0957415821001045},
+  author = {U. Mayetin and S. Kucuk},}
 
-% @INPROCEEDINGS{1990_optic,
-%   author={S. Hirose and K. Yoneda},
-%   booktitle={Proceedings., IEEE International Conference on Robotics and Automation}, 
-%   title={Development of optical six-axial force sensor and its signal calibration considering nonlinear interference}, 
-%   year={1990},
-%   pages={46-53 vol.1},
-%   doi={10.1109/ROBOT.1990.125944},}
+@INPROCEEDINGS{1990_optic,
+  author={S. Hirose and K. Yoneda},
+  booktitle={Proceedings., IEEE International Conference on Robotics and Automation}, 
+  title={Development of optical six-axial force sensor and its signal calibration considering nonlinear interference}, 
+  year={1990},
+  pages={46-53 vol.1},
+  doi={10.1109/ROBOT.1990.125944},}
 
 @article{photointerrupter_rob_hand,
-title = {Design of a miniature force sensor based on photointerrupter for robotic hand},
-journal = {Sensors and Actuators A: Physical},
-volume = {269},
-pages = {444-453},
-year = {2018},
-issn = {0924-4247},
-doi = {https://doi.org/10.1016/j.sna.2017.11.052},
-url = {https://www.sciencedirect.com/science/article/pii/S0924424717309317},
-author = {Seok Hwan Jeong and Ho Ju Lee and Kyung-Rok Kim and Kyung-Soo Kim},
-keywords = {Small force sensor, Photointerrupter, Force control of robotic hand},
-abstract = {In this paper, we propose a small, low cost force sensor based on a 
-commercially available photointerrupter for use in a tendon-driven robotic hand.
- The proposed sensor consists of a photointerrupter and an elastic frame and is designed
-  to measure tendon tension. Using the design methodology presented in this paper, 
-  the force sensor can be made small enough (4mm x 6mm x 10mm) to be inserted into a 
-  robotic fingertip and made able to measure a large allowable force (approximately 200N)
-   with low non-linearity (1.85%) and low hysteresis (1.19%). 
-   Due to the characteristics of the photointerrupter, it is possible to overcome
-    the disadvantages associated with traditional miniature force sensors and to have
-     very high resolution (0.1N) over the entire measurement range (0–200N).
-      To verify feasibility, we performed force feed-back control using a prototype 
-      of the sensor. Experimental results show that the proposed sensor has comparable
-       performance to commercial force sensors of similar size and can be manufactured
-        more simply and economically.}
+  title = {Design of a miniature force sensor based on photointerrupter for robotic hand},
+  journal = {Sensors and Actuators A: Physical},
+  volume = {269},
+  pages = {444-453},
+  year = {2018},
+  issn = {0924-4247},
+  doi = {https://doi.org/10.1016/j.sna.2017.11.052},
+  url = {https://www.sciencedirect.com/science/article/pii/S0924424717309317},
+  author = {Seok Hwan Jeong and Ho Ju Lee and Kyung-Rok Kim and Kyung-Soo Kim},
+  keywords = {Small force sensor, Photointerrupter, Force control of robotic hand},
+  abstract = {In this paper, we propose a small, low cost force sensor based on a 
+  commercially available photointerrupter for use in a tendon-driven robotic hand.
+  The proposed sensor consists of a photointerrupter and an elastic frame and is designed
+    to measure tendon tension. Using the design methodology presented in this paper, 
+    the force sensor can be made small enough (4mm x 6mm x 10mm) to be inserted into a 
+    robotic fingertip and made able to measure a large allowable force (approximately 200N)
+    with low non-linearity (1.85%) and low hysteresis (1.19%). 
+    Due to the characteristics of the photointerrupter, it is possible to overcome
+      the disadvantages associated with traditional miniature force sensors and to have
+      very high resolution (0.1N) over the entire measurement range (0–200N).
+        To verify feasibility, we performed force feed-back control using a prototype 
+        of the sensor. Experimental results show that the proposed sensor has comparable
+        performance to commercial force sensors of similar size and can be manufactured
+          more simply and economically.}
 }
 
 @article{LED_flux_estimation,
-author="Rammohan, A. and Ramesh Kumar, C. and Rashidi, M. M.",
-editor="Rushi Kumar, B. and Sivaraj, R. and Prasad, B. S. R. V. and Nalliah, M. and Reddy, A. Subramanyam",
-title="High-Power LED Luminous Flux Estimation Using a Mathematical Model Incorporating the Effects of Heatsink and Fins",
-booktitle="Applied Mathematics and Scientific Computing",
-year="2019",
-publisher="Springer International Publishing",
-address="Cham",
-pages="429--438",
-abstract="High-power light emitting diode (HPLED) is an emerging technology in automotive, aerospace, domestic, and industrial lighting applications. 
-Application of HPLED in the above mentioned areas are challenging, as effective cooling is required for maximal luminous output and longer life. 
-This chapter deals with estimation of the total luminous flux of HPLED using a mathematical model for a given heat sink configuration, and electric and thermal conditions. 
-The parameters that are considered in this model are voltage, current, the power of HPLED, the number of the LEDs in the module, 
-thermal parameters such as the junction temperature of LED, heat sink and fin temperature, ambient temperature, and thermal resistances. 
-The proposed model will be helpful for designing and predicting the luminous output of LED and also arriving at optimal heat sink and fin configurations for a given design.",
-isbn="978-3-030-01123-9",
+  author="Rammohan, A. and Ramesh Kumar, C. and Rashidi, M. M.",
+  editor="Rushi Kumar, B. and Sivaraj, R. and Prasad, B. S. R. V. and Nalliah, M. and Reddy, A. Subramanyam",
+  title="High-Power LED Luminous Flux Estimation Using a Mathematical Model Incorporating the Effects of Heatsink and Fins",
+  booktitle="Applied Mathematics and Scientific Computing",
+  year="2019",
+  publisher="Springer International Publishing",
+  address="Cham",
+  pages="429--438",
+  abstract="High-power light emitting diode (HPLED) is an emerging technology in automotive, aerospace, domestic, and industrial lighting applications. 
+  Application of HPLED in the above mentioned areas are challenging, as effective cooling is required for maximal luminous output and longer life. 
+  This chapter deals with estimation of the total luminous flux of HPLED using a mathematical model for a given heat sink configuration, and electric and thermal conditions. 
+  The parameters that are considered in this model are voltage, current, the power of HPLED, the number of the LEDs in the module, 
+  thermal parameters such as the junction temperature of LED, heat sink and fin temperature, ambient temperature, and thermal resistances. 
+  The proposed model will be helpful for designing and predicting the luminous output of LED and also arriving at optimal heat sink and fin configurations for a given design.",
+  isbn="978-3-030-01123-9",
 }
 
 @article{OPTIC_CELL_FOR_HAND,
-author = {Seok Hwan Jeong and Ho Ju Lee and Kyung-Rok Kim and Kyung-Soo Kim},
-title = {Design of a miniature force sensor based on photointerrupter for robotic hand},
-journal = {Sensors and Actuators A: Physical},
-volume = {269},
-pages = {444-453},
-year = {2018},
-issn = {0924-4247},
-doi = {https://doi.org/10.1016/j.sna.2017.11.052},
-url = {https://www.sciencedirect.com/science/article/pii/S0924424717309317},
-keywords = {Small force sensor, Photointerrupter, Force control of robotic hand},
+  author = {Seok Hwan Jeong and Ho Ju Lee and Kyung-Rok Kim and Kyung-Soo Kim},
+  title = {Design of a miniature force sensor based on photointerrupter for robotic hand},
+  journal = {Sensors and Actuators A: Physical},
+  volume = {269},
+  pages = {444-453},
+  year = {2018},
+  issn = {0924-4247},
+  doi = {https://doi.org/10.1016/j.sna.2017.11.052},
+  url = {https://www.sciencedirect.com/science/article/pii/S0924424717309317},
+  keywords = {Small force sensor, Photointerrupter, Force control of robotic hand},
 }
 @article{NN_decoupling,
-author = {Cao, Huibin and Yu, Yong and Ge, Yunjian},
-year = {2009},
-month = {08},
-pages = {},
-title = {A Research of Multi-axis Force Sensor Static Decoupling Method Based on Neural Network},
-doi = {10.1109/ICAL.2009.5262800}
+  author = {Cao, Huibin and Yu, Yong and Ge, Yunjian},
+  year = {2009},
+  month = {08},
+  pages = {},
+  title = {A Research of Multi-axis Force Sensor Static Decoupling Method Based on Neural Network},
+  doi = {10.1109/ICAL.2009.5262800}
 }
 @article{Static_Dynamic_Calibration_FlexiForce,
   title={Static and Dynamic Calibration for FlexiForce Sensor Using a Special Purpose Apparatus},
@@ -231,106 +228,115 @@ doi = {10.1109/ICAL.2009.5262800}
 }
 
 @Article{pressure_sens_calibration_stat_dyn,
-AUTHOR = {Pereira, José Dias},
-TITLE = {Pressure Sensors: Working Principles of Static and Dynamic Calibration},
-JOURNAL = {Sensors},
-VOLUME = {24},
-YEAR = {2024},
-NUMBER = {2},
-ARTICLE-NUMBER = {629},
-URL = {https://www.mdpi.com/1424-8220/24/2/629},
-PubMedID = {38276323},
-ISSN = {1424-8220},
-ABSTRACT = {This paper starts with an overview of the main principles used for pressure measurements, focusing on their usage in industrial applications domains. Then, the importance of calibration procedures, namely, static and dynamic calibration of pressure sensors, is analyzed. Regarding calibration, it is important to note that there are several applications where the pressure signals to be measured can have large variations in short periods of time. In industrial applications, particularly in continuous production processes, generally, dynamic pressure measurements are less common; however, they are still required in several cases, such as control loops that are very sensitive to pressure variations, even if the frequencies of those variations are in the range of a few tens of hertz, or even lower. The last part of the paper presents the hardware and software of a flexible and low-cost static and dynamic pressure calibrator that also presents the capability to generate arbitrary waveform pressure signals for calibration and testing purposes. The proposed calibrator also includes the following advantages: remote pressure sensing capabilities that can be used to minimize calibration errors, such as those associated with capillary effects and pressure leakages; portability; and low cost. The paper ends with some experimental results obtained with the proposed calibrator.},
-DOI = {10.3390/s24020629}
+  AUTHOR = {Pereira, José Dias},
+  TITLE = {Pressure Sensors: Working Principles of Static and Dynamic Calibration},
+  JOURNAL = {Sensors},
+  VOLUME = {24},
+  YEAR = {2024},
+  NUMBER = {2},
+  ARTICLE-NUMBER = {629},
+  URL = {https://www.mdpi.com/1424-8220/24/2/629},
+  PubMedID = {38276323},
+  ISSN = {1424-8220},
+  ABSTRACT = {This paper starts with an overview of the main principles used for pressure measurements, focusing on their usage in industrial applications domains. Then, the importance of calibration procedures, namely, static and dynamic calibration of pressure sensors, is analyzed. Regarding calibration, it is important to note that there are several applications where the pressure signals to be measured can have large variations in short periods of time. In industrial applications, particularly in continuous production processes, generally, dynamic pressure measurements are less common; however, they are still required in several cases, such as control loops that are very sensitive to pressure variations, even if the frequencies of those variations are in the range of a few tens of hertz, or even lower. The last part of the paper presents the hardware and software of a flexible and low-cost static and dynamic pressure calibrator that also presents the capability to generate arbitrary waveform pressure signals for calibration and testing purposes. The proposed calibrator also includes the following advantages: remote pressure sensing capabilities that can be used to minimize calibration errors, such as those associated with capillary effects and pressure leakages; portability; and low cost. The paper ends with some experimental results obtained with the proposed calibrator.},
+  DOI = {10.3390/s24020629}
 }
 
 @article{Deep_Learning_Calib,
-author = {Oh, Hyun and Kim, Uikyum and Kang, Gitae and Seo, Joon and Choi, Hyouk},
-year = {2018},
-month = {05},
-pages = {1-1},
-title = {Multi-Axial Force/Torque Sensor Calibration Method Based on Deep-Learning},
-volume = {PP},
-journal = {IEEE Sensors Journal},
-doi = {10.1109/JSEN.2018.2834727}
+  author = {Oh, Hyun and Kim, Uikyum and Kang, Gitae and Seo, Joon and Choi, Hyouk},
+  year = {2018},
+  month = {05},
+  pages = {1-1},
+  title = {Multi-Axial Force/Torque Sensor Calibration Method Based on Deep-Learning},
+  volume = {PP},
+  journal = {IEEE Sensors Journal},
+  doi = {10.1109/JSEN.2018.2834727}
 }
 @book{handbook_sensors,
-author = {Fraden, Jacob},
-title = {Handbook of Modern Sensors: Physics, Designs, and Applications (Handbook of Modern Sensors)},
-year = {2003},
-isbn = {0387007504},
-publisher = {SpringerVerlag}
+  author = {Fraden, Jacob},
+  title = {Handbook of Modern Sensors: Physics, Designs, and Applications (Handbook of Modern Sensors)},
+  year = {2003},
+  isbn = {0387007504},
+  publisher = {SpringerVerlag}
 }
 
 @misc{isotropic,
   title = {Isotropic},
   note = {(Accessed 20 Feb. 2024.)},
-  howpublished = {\url{https://www.merriam-webster.com/dictionary/isotropic}},
+  url = {https://www.merriam-webster.com/dictionary/isotropic},
   AUTHOR = {Merriam-Webster},
 }
 @article{six_axis_ERSG_hyst1,
-title = {Development and evaluation of a compact 6-axis force/moment sensor with a serial structure for the humanoid robot foot},
-journal = {Measurement},
-volume = {70},
-pages = {110-122},
-year = {2015},
-issn = {0263-2241},
-doi = {https://doi.org/10.1016/j.measurement.2015.03.027},
-url = {https://www.sciencedirect.com/science/article/pii/S0263224115001736},
-author = {Chao Yuan and Lu-Ping Luo and Quan Yuan and Jing Wu and Rui-Jun Yan and Hyeonguk Kim and Kyoo-Sik Shin and Chang-Soo Han},
-keywords = {Six-axis force/moment sensor, Serial structure, Interference error, Structural isotropy, Humanoid robot foot},
-abstract = {Used for hysteresis. In order to walk safely, forces and moments exerted on humanoid robot foot should be measured and used for controlling the robot. This paper describes the development and evaluation of a six-axis force/moment sensor used under humanoid robot foot. The developed sensor is capable of measuring 400N horizontal force, 1000N vertical force, 20N·m moment about the horizontal axis and 10N·m moment about the vertical axis using rectangular cross-sectional beams. The structure of the sensor is newly modeled, and the sensing elements are simulated by using finite element method (FEM). Then the sensor is fabricated by attaching strain gages onto the beams. Finally, a characteristic test of the developed sensor is carried out, and the output from FEM analysis agrees with those from the characteristic test.}
+  title = {Development and evaluation of a compact 6-axis force/moment sensor with a serial structure for the humanoid robot foot},
+  journal = {Measurement},
+  volume = {70},
+  pages = {110-122},
+  year = {2015},
+  issn = {0263-2241},
+  doi = {https://doi.org/10.1016/j.measurement.2015.03.027},
+  url = {https://www.sciencedirect.com/science/article/pii/S0263224115001736},
+  author = {Chao Yuan and Lu-Ping Luo and Quan Yuan and Jing Wu and Rui-Jun Yan and Hyeonguk Kim and Kyoo-Sik Shin and Chang-Soo Han},
+  keywords = {Six-axis force/moment sensor, Serial structure, Interference error, Structural isotropy, Humanoid robot foot},
+  abstract = {Used for hysteresis. In order to walk safely, forces and moments exerted on humanoid robot foot should be measured and used for controlling the robot. This paper describes the development and evaluation of a six-axis force/moment sensor used under humanoid robot foot. The developed sensor is capable of measuring 400N horizontal force, 1000N vertical force, 20N·m moment about the horizontal axis and 10N·m moment about the vertical axis using rectangular cross-sectional beams. The structure of the sensor is newly modeled, and the sensing elements are simulated by using finite element method (FEM). Then the sensor is fabricated by attaching strain gages onto the beams. Finally, a characteristic test of the developed sensor is carried out, and the output from FEM analysis agrees with those from the characteristic test.}
 }
 
 @article{six_axis_ERSG_hyst2,
-author = {Feng, Lihang and Ba, Aaa and Zhang, Weigong and Pang, Han and Wang, Tie},
-year = {2015},
-month = {02},
-pages = {},
-title = {Design and optimization of a self-decoupled six-axis wheel force transducer for a heavy truck},
-volume = {229},
-journal = {Proceedings of the Institution of Mechanical Engineers, Part D: Journal of Automobile Engineering},
-doi = {10.1177/0954407014566439}
+  author = {Feng, Lihang and Ba, Aaa and Zhang, Weigong and Pang, Han and Wang, Tie},
+  year = {2015},
+  month = {02},
+  pages = {},
+  title = {Design and optimization of a self-decoupled six-axis wheel force transducer for a heavy truck},
+  volume = {229},
+  journal = {Proceedings of the Institution of Mechanical Engineers, Part D: Journal of Automobile Engineering},
+  doi = {10.1177/0954407014566439}
 }
 
 @article{pressure_capac_hysteresis,
-author = {Wang, Xiaoyi and Deng, Yang and Jiang, Peng and Chen, Xingru and Yu, Hongyu},
-year = {2022},
-month = {10},
-pages = {113},
-title = {Low-hysteresis, pressure-insensitive, and transparent capacitive strain sensor for human activity monitoring},
-volume = {8},
-journal = {Microsystems \& nanoengineering},
-doi = {10.1038/s41378-022-00450-7}
+  author = {Wang, Xiaoyi and Deng, Yang and Jiang, Peng and Chen, Xingru and Yu, Hongyu},
+  year = {2022},
+  month = {10},
+  pages = {113},
+  title = {Low-hysteresis, pressure-insensitive, and transparent capacitive strain sensor for human activity monitoring},
+  volume = {8},
+  journal = {Microsystems \& nanoengineering},
+  doi = {10.1038/s41378-022-00450-7}
 }
 
 @article{pressure_capac_hysteresis_2,
-author = {Roh, Jay and Shin, Kyu-Sik and Song, Tae-Ha and Kim, Jihong and Lee, Dae-Sung},
-year = {2023},
-month = {04},
-pages = {975},
-title = {Development of an Implantable Capacitive Pressure Sensor for Biomedical Applications},
-volume = {14},
-journal = {Micromachines},
-doi = {10.3390/mi14050975}
+  author = {Roh, Jay and Shin, Kyu-Sik and Song, Tae-Ha and Kim, Jihong and Lee, Dae-Sung},
+  year = {2023},
+  month = {04},
+  pages = {975},
+  title = {Development of an Implantable Capacitive Pressure Sensor for Biomedical Applications},
+  volume = {14},
+  journal = {Micromachines},
+  doi = {10.3390/mi14050975}
 }
+
 % TODO: check
 @article{hysteresis_calc,
   journal       = {Missouri University of Science and Technology},
-  howpublished = {\url{https://web.mst.edu/~cottrell/me240/resources/Calibration/}},
+  url = {https://web.mst.edu/~cottrell/me240/resources/Calibration/},
   title        = {Explanation of Hysteresis calculation},
   year         = {2011},
   note = {(Accessed 20 Feb. 2024.)}
 }
 
 @techreport{ISO_cross_talk,
-type = {Standard},
-key = {ISO 21612:2021},
-month = feb,
-year = {2021},
-title = {{Road vehicles -- Crosstalk determination for multi-axis load cell}},
-volume = {2021},
-address = {Geneva, CH},
-institution = {International Organization for Standardization}
+  type = {Standard},
+  key = {ISO 21612:2021},
+  month = feb,
+  year = {2021},
+  title = {{Road vehicles -- Crosstalk determination for multi-axis load cell}},
+  volume = {2021},
+  address = {Geneva, CH},
+  institution = {International Organization for Standardization}
+}
+
+@manual{micro_node,
+  author       = {Racoon Lab},
+  title        = {Micro node hardware},
+  howpublished = {\url{ }},
+  note = {(Accessed 20 Feb. 2024.)},
+  url = {https://docs.raccoonlab.co/guide/can_pwm/can_pwm_micro.html},
 }
